# pawn-redis

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  Taskfile.yml  makefile  pawn.json  pawn_redis_version.inc  readme.md  redis.inc  samp-redis.inc  test.pwn
docs/: readme.md
docs/idm/: readme.md
docs/ss/: readme.md
docs/ucp/: readme.md
examples/: example.pwn
examples/go/: main.go
examples/js/: index.js  package.json
examples/python/: listener.py
lib/samp-plugin-sdk/amx/: amx.h
patches/: fix-missing-thread-include.patch
src/: CMakeLists.txt  impl.cpp  impl.hpp  main.cpp  main.hpp  natives.cpp  natives.hpp
src/hiredis/: test.c
src/plugin-natives/: NativeFunc.hpp  NativeHook.hpp  NativeImport.hpp  NativesMain.hpp  README.md
src/plugin-natives/Internal/: NativeCast.hpp  NativeFuncImpl.hpp  NativeHookImpl.hpp
src/sdk/: amxplugin2.cpp  sdk.hpp
src/sdk/amx/: amx.h  amx2.h
test/: pawn.yaml  samp-redis-tests.amx  samp-redis-tests.pwn  samp.json  test_command_1.amx  test_command_1.pwn  test_connect.amx  test_connect.pwn  test_setget_string_1.amx  test_setget_string_1.pwn
